parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> declaration NEWLINE
Rule 5     statement -> assignment NEWLINE
Rule 6     statement -> cycle NEWLINE
Rule 7     statement -> command NEWLINE
Rule 8     statement -> procedure NEWLINE
Rule 9     statement -> call NEWLINE
Rule 10    statement -> record NEWLINE
Rule 11    statement -> empty NEWLINE
Rule 12    declaration -> type variable
Rule 13    assignment -> variable ASSIGNMENT expression
Rule 14    assignment -> variable ASSIGNMENT assignment
Rule 15    cycle -> L_FBRACKET expression R_FBRACKET BLOCK inner_statements UNBLOCK
Rule 16    command -> MOVEUP L_QBRACKET variable R_QBRACKET
Rule 17    command -> MOVEDOWN L_QBRACKET variable R_QBRACKET
Rule 18    command -> MOVERIGHT L_QBRACKET variable R_QBRACKET
Rule 19    command -> MOVELEFT L_QBRACKET variable R_QBRACKET
Rule 20    command -> PINGUP L_QBRACKET variable R_QBRACKET
Rule 21    command -> PINGDOWN L_QBRACKET variable R_QBRACKET
Rule 22    command -> PINGRIGHT L_QBRACKET variable R_QBRACKET
Rule 23    command -> PINGLEFT L_QBRACKET variable R_QBRACKET
Rule 24    command -> VISION L_QBRACKET variable R_QBRACKET
Rule 25    command -> VOICE L_QBRACKET expression R_QBRACKET
Rule 26    procedure -> PROC VARIABLE L_QBRACKET parameters R_QBRACKET statements_group
Rule 27    call -> VARIABLE L_QBRACKET variables R_QBRACKET
Rule 28    record -> RECORD VARIABLE DATA L_QBRACKET parameters R_QBRACKET
Rule 29    record -> RECORD VARIABLE DATA L_QBRACKET parameters R_QBRACKET conversions
Rule 30    conversions -> conversions conversion
Rule 31    conversions -> conversion
Rule 32    conversion -> CONVERSION TO type VARIABLE
Rule 33    conversion -> CONVERSION FROM type VARIABLE
Rule 34    empty -> <empty>
Rule 35    type -> NUMERIC
Rule 36    type -> STRING
Rule 37    type -> LOGIC
Rule 38    type -> VARIABLE
Rule 39    expression -> variable
Rule 40    expression -> const
Rule 41    expression -> complex_expression
Rule 42    variables -> expression
Rule 43    variables -> expression COMMA variables
Rule 44    variable -> VARIABLE L_QBRACKET expression R_QBRACKET
Rule 45    variable -> VARIABLE
Rule 46    const -> TRUE
Rule 47    const -> FALSE
Rule 48    const -> UNDEF
Rule 49    const -> DECIMAL
Rule 50    const -> TEXT
Rule 51    complex_expression -> part_expression PLUS part_expression
Rule 52    complex_expression -> part_expression MINUS part_expression
Rule 53    complex_expression -> part_expression STAR part_expression
Rule 54    complex_expression -> part_expression SLASH part_expression
Rule 55    complex_expression -> part_expression CARET part_expression
Rule 56    complex_expression -> part_expression GREATER part_expression
Rule 57    complex_expression -> part_expression LESS part_expression
Rule 58    complex_expression -> part_expression EQ part_expression
Rule 59    complex_expression -> part_expression NOTEQ part_expression
Rule 60    complex_expression -> MINUS expression
Rule 61    part_expression -> DOT expression
Rule 62    part_expression -> expression DOT
Rule 63    part_expression -> expression
Rule 64    parameters -> parameter COMMA parameters
Rule 65    parameters -> parameter
Rule 66    parameter -> type VARIABLE AMPERSAND
Rule 67    parameter -> type VARIABLE
Rule 68    statements_group -> BLOCK inner_statements UNBLOCK
Rule 69    statements_group -> inner_statement
Rule 70    inner_statements -> inner_statement inner_statements
Rule 71    inner_statements -> inner_statement
Rule 72    inner_statement -> declaration NEWLINE
Rule 73    inner_statement -> assignment NEWLINE
Rule 74    inner_statement -> cycle NEWLINE
Rule 75    inner_statement -> command NEWLINE
Rule 76    inner_statement -> call NEWLINE
Rule 77    inner_statement -> empty NEWLINE
Rule 78    statement -> error
Rule 79    assignment -> variable ASSIGNMENT error
Rule 80    command -> MOVEUP L_QBRACKET error R_QBRACKET
Rule 81    command -> MOVEDOWN L_QBRACKET error R_QBRACKET
Rule 82    command -> MOVERIGHT L_QBRACKET error R_QBRACKET
Rule 83    command -> MOVELEFT L_QBRACKET error R_QBRACKET
Rule 84    command -> PINGUP L_QBRACKET error R_QBRACKET
Rule 85    command -> PINGDOWN L_QBRACKET error R_QBRACKET
Rule 86    command -> PINGRIGHT L_QBRACKET error R_QBRACKET
Rule 87    command -> PINGLEFT L_QBRACKET error R_QBRACKET
Rule 88    command -> VISION L_QBRACKET error R_QBRACKET
Rule 89    command -> VOICE L_QBRACKET error R_QBRACKET

Terminals, with rules where they appear

AMPERSAND            : 66
ASSIGNMENT           : 13 14 79
BLOCK                : 15 68
CARET                : 55
COMMA                : 43 64
CONVERSION           : 32 33
DATA                 : 28 29
DECIMAL              : 49
DOT                  : 61 62
EQ                   : 58
FALSE                : 47
FROM                 : 33
GREATER              : 56
LESS                 : 57
LOGIC                : 37
L_FBRACKET           : 15
L_QBRACKET           : 16 17 18 19 20 21 22 23 24 25 26 27 28 29 44 80 81 82 83 84 85 86 87 88 89
MINUS                : 52 60
MOVEDOWN             : 17 81
MOVELEFT             : 19 83
MOVERIGHT            : 18 82
MOVEUP               : 16 80
NEWLINE              : 4 5 6 7 8 9 10 11 72 73 74 75 76 77
NOTEQ                : 59
NUMERIC              : 35
PINGDOWN             : 21 85
PINGLEFT             : 23 87
PINGRIGHT            : 22 86
PINGUP               : 20 84
PLUS                 : 51
PROC                 : 26
RECORD               : 28 29
R_FBRACKET           : 15
R_QBRACKET           : 16 17 18 19 20 21 22 23 24 25 26 27 28 29 44 80 81 82 83 84 85 86 87 88 89
SLASH                : 54
STAR                 : 53
STRING               : 36
TEXT                 : 50
TO                   : 32
TRUE                 : 46
UNBLOCK              : 15 68
UNDEF                : 48
VARIABLE             : 26 27 28 29 32 33 38 44 45 66 67
VISION               : 24 88
VOICE                : 25 89
error                : 78 79 80 81 82 83 84 85 86 87 88 89

Nonterminals, with rules where they appear

assignment           : 5 14 73
call                 : 9 76
command              : 7 75
complex_expression   : 41
const                : 40
conversion           : 30 31
conversions          : 29 30
cycle                : 6 74
declaration          : 4 72
empty                : 11 77
expression           : 13 15 25 42 43 44 60 61 62 63
inner_statement      : 69 70 71
inner_statements     : 15 68 70
parameter            : 64 65
parameters           : 26 28 29 64
part_expression      : 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59
procedure            : 8
program              : 0
record               : 10
statement            : 2 3
statements           : 1 2
statements_group     : 26
type                 : 12 32 33 66 67
variable             : 12 13 14 16 17 18 19 20 21 22 23 24 39 79
variables            : 27 43

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . declaration NEWLINE
    (5) statement -> . assignment NEWLINE
    (6) statement -> . cycle NEWLINE
    (7) statement -> . command NEWLINE
    (8) statement -> . procedure NEWLINE
    (9) statement -> . call NEWLINE
    (10) statement -> . record NEWLINE
    (11) statement -> . empty NEWLINE
    (78) statement -> . error
    (12) declaration -> . type variable
    (13) assignment -> . variable ASSIGNMENT expression
    (14) assignment -> . variable ASSIGNMENT assignment
    (79) assignment -> . variable ASSIGNMENT error
    (15) cycle -> . L_FBRACKET expression R_FBRACKET BLOCK inner_statements UNBLOCK
    (16) command -> . MOVEUP L_QBRACKET variable R_QBRACKET
    (17) command -> . MOVEDOWN L_QBRACKET variable R_QBRACKET
    (18) command -> . MOVERIGHT L_QBRACKET variable R_QBRACKET
    (19) command -> . MOVELEFT L_QBRACKET variable R_QBRACKET
    (20) command -> . PINGUP L_QBRACKET variable R_QBRACKET
    (21) command -> . PINGDOWN L_QBRACKET variable R_QBRACKET
    (22) command -> . PINGRIGHT L_QBRACKET variable R_QBRACKET
    (23) command -> . PINGLEFT L_QBRACKET variable R_QBRACKET
    (24) command -> . VISION L_QBRACKET variable R_QBRACKET
    (25) command -> . VOICE L_QBRACKET expression R_QBRACKET
    (80) command -> . MOVEUP L_QBRACKET error R_QBRACKET
    (81) command -> . MOVEDOWN L_QBRACKET error R_QBRACKET
    (82) command -> . MOVERIGHT L_QBRACKET error R_QBRACKET
    (83) command -> . MOVELEFT L_QBRACKET error R_QBRACKET
    (84) command -> . PINGUP L_QBRACKET error R_QBRACKET
    (85) command -> . PINGDOWN L_QBRACKET error R_QBRACKET
    (86) command -> . PINGRIGHT L_QBRACKET error R_QBRACKET
    (87) command -> . PINGLEFT L_QBRACKET error R_QBRACKET
    (88) command -> . VISION L_QBRACKET error R_QBRACKET
    (89) command -> . VOICE L_QBRACKET error R_QBRACKET
    (26) procedure -> . PROC VARIABLE L_QBRACKET parameters R_QBRACKET statements_group
    (27) call -> . VARIABLE L_QBRACKET variables R_QBRACKET
    (28) record -> . RECORD VARIABLE DATA L_QBRACKET parameters R_QBRACKET
    (29) record -> . RECORD VARIABLE DATA L_QBRACKET parameters R_QBRACKET conversions
    (34) empty -> .
    (35) type -> . NUMERIC
    (36) type -> . STRING
    (37) type -> . LOGIC
    (38) type -> . VARIABLE
    (44) variable -> . VARIABLE L_QBRACKET expression R_QBRACKET
    (45) variable -> . VARIABLE

    error           shift and go to state 12
    L_FBRACKET      shift and go to state 15
    MOVEUP          shift and go to state 16
    MOVEDOWN        shift and go to state 17
    MOVERIGHT       shift and go to state 18
    MOVELEFT        shift and go to state 19
    PINGUP          shift and go to state 20
    PINGDOWN        shift and go to state 21
    PINGRIGHT       shift and go to state 22
    PINGLEFT        shift and go to state 23
    VISION          shift and go to state 24
    VOICE           shift and go to state 25
    PROC            shift and go to state 26
    VARIABLE        shift and go to state 27
    RECORD          shift and go to state 28
    NEWLINE         reduce using rule 34 (empty -> .)
    NUMERIC         shift and go to state 29
    STRING          shift and go to state 30
    LOGIC           shift and go to state 31

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    declaration                    shift and go to state 4
    assignment                     shift and go to state 5
    cycle                          shift and go to state 6
    command                        shift and go to state 7
    procedure                      shift and go to state 8
    call                           shift and go to state 9
    record                         shift and go to state 10
    empty                          shift and go to state 11
    type                           shift and go to state 13
    variable                       shift and go to state 14

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (2) statements -> statements . statement
    (4) statement -> . declaration NEWLINE
    (5) statement -> . assignment NEWLINE
    (6) statement -> . cycle NEWLINE
    (7) statement -> . command NEWLINE
    (8) statement -> . procedure NEWLINE
    (9) statement -> . call NEWLINE
    (10) statement -> . record NEWLINE
    (11) statement -> . empty NEWLINE
    (78) statement -> . error
    (12) declaration -> . type variable
    (13) assignment -> . variable ASSIGNMENT expression
    (14) assignment -> . variable ASSIGNMENT assignment
    (79) assignment -> . variable ASSIGNMENT error
    (15) cycle -> . L_FBRACKET expression R_FBRACKET BLOCK inner_statements UNBLOCK
    (16) command -> . MOVEUP L_QBRACKET variable R_QBRACKET
    (17) command -> . MOVEDOWN L_QBRACKET variable R_QBRACKET
    (18) command -> . MOVERIGHT L_QBRACKET variable R_QBRACKET
    (19) command -> . MOVELEFT L_QBRACKET variable R_QBRACKET
    (20) command -> . PINGUP L_QBRACKET variable R_QBRACKET
    (21) command -> . PINGDOWN L_QBRACKET variable R_QBRACKET
    (22) command -> . PINGRIGHT L_QBRACKET variable R_QBRACKET
    (23) command -> . PINGLEFT L_QBRACKET variable R_QBRACKET
    (24) command -> . VISION L_QBRACKET variable R_QBRACKET
    (25) command -> . VOICE L_QBRACKET expression R_QBRACKET
    (80) command -> . MOVEUP L_QBRACKET error R_QBRACKET
    (81) command -> . MOVEDOWN L_QBRACKET error R_QBRACKET
    (82) command -> . MOVERIGHT L_QBRACKET error R_QBRACKET
    (83) command -> . MOVELEFT L_QBRACKET error R_QBRACKET
    (84) command -> . PINGUP L_QBRACKET error R_QBRACKET
    (85) command -> . PINGDOWN L_QBRACKET error R_QBRACKET
    (86) command -> . PINGRIGHT L_QBRACKET error R_QBRACKET
    (87) command -> . PINGLEFT L_QBRACKET error R_QBRACKET
    (88) command -> . VISION L_QBRACKET error R_QBRACKET
    (89) command -> . VOICE L_QBRACKET error R_QBRACKET
    (26) procedure -> . PROC VARIABLE L_QBRACKET parameters R_QBRACKET statements_group
    (27) call -> . VARIABLE L_QBRACKET variables R_QBRACKET
    (28) record -> . RECORD VARIABLE DATA L_QBRACKET parameters R_QBRACKET
    (29) record -> . RECORD VARIABLE DATA L_QBRACKET parameters R_QBRACKET conversions
    (34) empty -> .
    (35) type -> . NUMERIC
    (36) type -> . STRING
    (37) type -> . LOGIC
    (38) type -> . VARIABLE
    (44) variable -> . VARIABLE L_QBRACKET expression R_QBRACKET
    (45) variable -> . VARIABLE

    $end            reduce using rule 1 (program -> statements .)
    error           shift and go to state 12
    L_FBRACKET      shift and go to state 15
    MOVEUP          shift and go to state 16
    MOVEDOWN        shift and go to state 17
    MOVERIGHT       shift and go to state 18
    MOVELEFT        shift and go to state 19
    PINGUP          shift and go to state 20
    PINGDOWN        shift and go to state 21
    PINGRIGHT       shift and go to state 22
    PINGLEFT        shift and go to state 23
    VISION          shift and go to state 24
    VOICE           shift and go to state 25
    PROC            shift and go to state 26
    VARIABLE        shift and go to state 27
    RECORD          shift and go to state 28
    NEWLINE         reduce using rule 34 (empty -> .)
    NUMERIC         shift and go to state 29
    STRING          shift and go to state 30
    LOGIC           shift and go to state 31

    statement                      shift and go to state 32
    declaration                    shift and go to state 4
    assignment                     shift and go to state 5
    cycle                          shift and go to state 6
    command                        shift and go to state 7
    procedure                      shift and go to state 8
    call                           shift and go to state 9
    record                         shift and go to state 10
    empty                          shift and go to state 11
    type                           shift and go to state 13
    variable                       shift and go to state 14

state 3

    (3) statements -> statement .

    error           reduce using rule 3 (statements -> statement .)
    L_FBRACKET      reduce using rule 3 (statements -> statement .)
    MOVEUP          reduce using rule 3 (statements -> statement .)
    MOVEDOWN        reduce using rule 3 (statements -> statement .)
    MOVERIGHT       reduce using rule 3 (statements -> statement .)
    MOVELEFT        reduce using rule 3 (statements -> statement .)
    PINGUP          reduce using rule 3 (statements -> statement .)
    PINGDOWN        reduce using rule 3 (statements -> statement .)
    PINGRIGHT       reduce using rule 3 (statements -> statement .)
    PINGLEFT        reduce using rule 3 (statements -> statement .)
    VISION          reduce using rule 3 (statements -> statement .)
    VOICE           reduce using rule 3 (statements -> statement .)
    PROC            reduce using rule 3 (statements -> statement .)
    VARIABLE        reduce using rule 3 (statements -> statement .)
    RECORD          reduce using rule 3 (statements -> statement .)
    NUMERIC         reduce using rule 3 (statements -> statement .)
    STRING          reduce using rule 3 (statements -> statement .)
    LOGIC           reduce using rule 3 (statements -> statement .)
    NEWLINE         reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)


state 4

    (4) statement -> declaration . NEWLINE

    NEWLINE         shift and go to state 33


state 5

    (5) statement -> assignment . NEWLINE

    NEWLINE         shift and go to state 34


state 6

    (6) statement -> cycle . NEWLINE

    NEWLINE         shift and go to state 35


state 7

    (7) statement -> command . NEWLINE

    NEWLINE         shift and go to state 36


state 8

    (8) statement -> procedure . NEWLINE

    NEWLINE         shift and go to state 37


state 9

    (9) statement -> call . NEWLINE

    NEWLINE         shift and go to state 38


state 10

    (10) statement -> record . NEWLINE

    NEWLINE         shift and go to state 39


state 11

    (11) statement -> empty . NEWLINE

    NEWLINE         shift and go to state 40


state 12

    (78) statement -> error .

    error           reduce using rule 78 (statement -> error .)
    L_FBRACKET      reduce using rule 78 (statement -> error .)
    MOVEUP          reduce using rule 78 (statement -> error .)
    MOVEDOWN        reduce using rule 78 (statement -> error .)
    MOVERIGHT       reduce using rule 78 (statement -> error .)
    MOVELEFT        reduce using rule 78 (statement -> error .)
    PINGUP          reduce using rule 78 (statement -> error .)
    PINGDOWN        reduce using rule 78 (statement -> error .)
    PINGRIGHT       reduce using rule 78 (statement -> error .)
    PINGLEFT        reduce using rule 78 (statement -> error .)
    VISION          reduce using rule 78 (statement -> error .)
    VOICE           reduce using rule 78 (statement -> error .)
    PROC            reduce using rule 78 (statement -> error .)
    VARIABLE        reduce using rule 78 (statement -> error .)
    RECORD          reduce using rule 78 (statement -> error .)
    NUMERIC         reduce using rule 78 (statement -> error .)
    STRING          reduce using rule 78 (statement -> error .)
    LOGIC           reduce using rule 78 (statement -> error .)
    NEWLINE         reduce using rule 78 (statement -> error .)
    $end            reduce using rule 78 (statement -> error .)


state 13

    (12) declaration -> type . variable
    (44) variable -> . VARIABLE L_QBRACKET expression R_QBRACKET
    (45) variable -> . VARIABLE

    VARIABLE        shift and go to state 42

    variable                       shift and go to state 41

state 14

    (13) assignment -> variable . ASSIGNMENT expression
    (14) assignment -> variable . ASSIGNMENT assignment
    (79) assignment -> variable . ASSIGNMENT error

    ASSIGNMENT      shift and go to state 43


state 15

    (15) cycle -> L_FBRACKET . expression R_FBRACKET BLOCK inner_statements UNBLOCK
    (39) expression -> . variable
    (40) expression -> . const
    (41) expression -> . complex_expression
    (44) variable -> . VARIABLE L_QBRACKET expression R_QBRACKET
    (45) variable -> . VARIABLE
    (46) const -> . TRUE
    (47) const -> . FALSE
    (48) const -> . UNDEF
    (49) const -> . DECIMAL
    (50) const -> . TEXT
    (51) complex_expression -> . part_expression PLUS part_expression
    (52) complex_expression -> . part_expression MINUS part_expression
    (53) complex_expression -> . part_expression STAR part_expression
    (54) complex_expression -> . part_expression SLASH part_expression
    (55) complex_expression -> . part_expression CARET part_expression
    (56) complex_expression -> . part_expression GREATER part_expression
    (57) complex_expression -> . part_expression LESS part_expression
    (58) complex_expression -> . part_expression EQ part_expression
    (59) complex_expression -> . part_expression NOTEQ part_expression
    (60) complex_expression -> . MINUS expression
    (61) part_expression -> . DOT expression
    (62) part_expression -> . expression DOT
    (63) part_expression -> . expression

    VARIABLE        shift and go to state 42
    TRUE            shift and go to state 48
    FALSE           shift and go to state 49
    UNDEF           shift and go to state 50
    DECIMAL         shift and go to state 51
    TEXT            shift and go to state 52
    MINUS           shift and go to state 54
    DOT             shift and go to state 55

    expression                     shift and go to state 44
    variable                       shift and go to state 45
    const                          shift and go to state 46
    complex_expression             shift and go to state 47
    part_expression                shift and go to state 53

state 16

    (16) command -> MOVEUP . L_QBRACKET variable R_QBRACKET
    (80) command -> MOVEUP . L_QBRACKET error R_QBRACKET

    L_QBRACKET      shift and go to state 56


state 17

    (17) command -> MOVEDOWN . L_QBRACKET variable R_QBRACKET
    (81) command -> MOVEDOWN . L_QBRACKET error R_QBRACKET

    L_QBRACKET      shift and go to state 57


state 18

    (18) command -> MOVERIGHT . L_QBRACKET variable R_QBRACKET
    (82) command -> MOVERIGHT . L_QBRACKET error R_QBRACKET

    L_QBRACKET      shift and go to state 58


state 19

    (19) command -> MOVELEFT . L_QBRACKET variable R_QBRACKET
    (83) command -> MOVELEFT . L_QBRACKET error R_QBRACKET

    L_QBRACKET      shift and go to state 59


state 20

    (20) command -> PINGUP . L_QBRACKET variable R_QBRACKET
    (84) command -> PINGUP . L_QBRACKET error R_QBRACKET

    L_QBRACKET      shift and go to state 60


state 21

    (21) command -> PINGDOWN . L_QBRACKET variable R_QBRACKET
    (85) command -> PINGDOWN . L_QBRACKET error R_QBRACKET

    L_QBRACKET      shift and go to state 61


state 22

    (22) command -> PINGRIGHT . L_QBRACKET variable R_QBRACKET
    (86) command -> PINGRIGHT . L_QBRACKET error R_QBRACKET

    L_QBRACKET      shift and go to state 62


state 23

    (23) command -> PINGLEFT . L_QBRACKET variable R_QBRACKET
    (87) command -> PINGLEFT . L_QBRACKET error R_QBRACKET

    L_QBRACKET      shift and go to state 63


state 24

    (24) command -> VISION . L_QBRACKET variable R_QBRACKET
    (88) command -> VISION . L_QBRACKET error R_QBRACKET

    L_QBRACKET      shift and go to state 64


state 25

    (25) command -> VOICE . L_QBRACKET expression R_QBRACKET
    (89) command -> VOICE . L_QBRACKET error R_QBRACKET

    L_QBRACKET      shift and go to state 65


state 26

    (26) procedure -> PROC . VARIABLE L_QBRACKET parameters R_QBRACKET statements_group

    VARIABLE        shift and go to state 66


state 27

    (27) call -> VARIABLE . L_QBRACKET variables R_QBRACKET
    (38) type -> VARIABLE .
    (44) variable -> VARIABLE . L_QBRACKET expression R_QBRACKET
    (45) variable -> VARIABLE .

    L_QBRACKET      shift and go to state 67
    VARIABLE        reduce using rule 38 (type -> VARIABLE .)
    ASSIGNMENT      reduce using rule 45 (variable -> VARIABLE .)


state 28

    (28) record -> RECORD . VARIABLE DATA L_QBRACKET parameters R_QBRACKET
    (29) record -> RECORD . VARIABLE DATA L_QBRACKET parameters R_QBRACKET conversions

    VARIABLE        shift and go to state 68


state 29

    (35) type -> NUMERIC .

    VARIABLE        reduce using rule 35 (type -> NUMERIC .)


state 30

    (36) type -> STRING .

    VARIABLE        reduce using rule 36 (type -> STRING .)


state 31

    (37) type -> LOGIC .
